[package]
name = "llama_cpp-rs"
version = "0.3.1"
edition = "2021"

[lib]
name = "llama_cpp_rs"

[workspace]
resolver = "2"
members = ["crates/llama_cpp_sys", "crates/llama_cpp", "crates/llama_cpp_tests"]

[workspace.dependencies]
futures = "0.3.30"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }

[dependencies]
llama_cpp = { path = "crates/llama_cpp" }
llama_cpp_sys = { path = "crates/llama_cpp_sys" }
